fix: wildcard import support + trial scripts
- core.clj: filter-header-imports が wildcard import (pkg.*) のパッケージ
  プレフィックスを照合し、テストの個別 import を除去しないよう修正
- core.clj: existing-cls がワイルドカード配下のクラスをファイルシステムから
  列挙し、dep-sig-txt に DTO シグネチャが含まれるよう修正
- runner.clj: 関連変更
- trials/: fix-one-class / regen-all / regen-one-class / merge-one-class /
  verify-prompt / dry-run-count スクリプトを追加